# factor-factory

./: .gitignore  README.md  README.zh-CN.md  STEP1_STATUS.md  pyproject.toml
docs/: repo-layering-and-naming.md  repo-layering-and-naming.zh-CN.md
factor_factory/: __init__.py  runtime_context.py
prompts/: step1_alpha_thesis.md  step1_ambiguity_review.md  step1_chief_merge.md  step1_report_ingestion.md  step1_report_intake.md
schemas/: report_map.schema.json
scripts/: ai_interests_record_candidates.remote.py  alpha004_iterate_tests.py  alpha004_turnover_pb.py  alpha004_variants.py  alpha004_wave3_tests.py  alpha005_analysis.py  alpha006_analysis.py  alpha007_analysis.py  alpha007_variants.py  analyze_topic_liquidity_top_heads.py  append_clean_daily_layer.py  append_limitup_topics_to_latest_topic_proposal.py  build_clean_daily_layer.py  build_daily_clean_enhanced.py  build_factorforge_embedding_index.py  build_factorforge_retrieval_index.py  build_factorforge_runtime_context.py  build_report_qlib_provider.py  check_step34_comment_policy.py  collect_data_yichu_intraday_source_layer.py  export_factorforge_obsidian.py  factorforge_task_ledger.py  merge_daily_incremental_into_daily.py  preprocess_daily_data.py  query_factorforge_retrieval_index.py  refresh_clean_daily_after_tushare_update.py  render_topic_liquidity_strict_report_pdf.py  report_data_yichu_intraday_run.sh  report_topic_liquidity_dragon_candidates.py  report_topic_liquidity_dragon_run.sh  run_factorforge_ultimate.py  run_qlib_backtest_wrapper.py  run_qlib_native_report.py  run_step12_from_intake.py  (+23 more)
(+291 files in other folders)
